--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.DailyReportIndexActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -13,36 +13,38 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="right"
+            android:orientation="horizontal"
+            tools:ignore="RtlHardcoded">
 
             <Button
-                android:id="@+id/dailyReportIndexButtonToSettings"
+                android:id="@+id/daily_report_index_button_to_settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:text="@string/setting"
-                android:textColor="@color/colorLink"
-                app:layout_constraintRight_toLeftOf="@+id/dailyReportIndexButtonToNew" />
+                android:textColor="@color/colorLink" />
 
             <Button
-                android:id="@+id/dailyReportIndexButtonToNew"
+                android:id="@+id/daily_report_index_button_to_new"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:text="@string/newDailyReport"
-                android:textColor="@color/colorLink"
-                app:layout_constraintRight_toRightOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:textColor="@color/colorLink" />
+        </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <ListView
-        android:id="@+id/dailyReportIndexDailyReportList"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/daily_report_index_tab"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:divider="@color/colorDivider"
-        android:dividerHeight="1sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dailyReportIndexToolBar" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content" />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/daily_report_index_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
